# fhcgse-opengl-shader-pipeline

./: .gitignore  CMakeLists.txt  README.md
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
resources/: pizza.mtl  shader.fs  shader.vs
resources/model/: pizza.mtl
source/: main.cpp  mesh.h  model.h  shader.cpp  shader.h
